--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -143,7 +143,7 @@ body {
 .btn-blue {
   padding: 0px 24px;
   border: 1px solid transparent;
-  border-radius: 48px;
+  border-radius: 5px;
   font-size: 16px;
   line-height: 1;
   text-align: center;
@@ -178,4 +178,16 @@ body {
   border-right: 0.3em solid transparent;
   border-bottom: 0;
   border-left: 0.3em solid transparent;
+}
+
+.table>:not(caption)>*>* {
+  padding: .5rem .5rem;  
+  border: none !important;
+  box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
+}
+
+td{
+  background: var(--tertiaryColor) !important;
+  border-radius: 4px;
+  margin-top: 10px;
 }
