--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -186,8 +186,7 @@ body {
   box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
 }
 
-td{
+.calendar-event{
   background: var(--tertiaryColor) !important;
-  border-radius: 4px;
-  margin-top: 10px;
+  border-radius: 4px;  
 }
