--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -14,7 +14,7 @@ body {
 
 /* Srollbar */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
@@ -189,4 +189,10 @@ body {
 .calendar-event{
   background: var(--tertiaryColor) !important;
   border-radius: 4px;  
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+.calendar-event:hover{
+  background: var(--secondaryColor) !important;
+  color: #ffffff !important;
 }
