--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,5 @@
+
+
 html,
 body {  
   font-size: 100%;
@@ -370,7 +372,6 @@ body {
 .calendar-event:hover{
   background: var(--secondaryColor) !important;
   color: #ffffff !important;
-  margin-top: 10px;
 }
 
 table tbody{
@@ -381,4 +382,15 @@ table tbody{
   border-radius: 50%;
   height: 220px !important;
   width: 190px;
+}
+
+.rbc-toolbar button:active, .rbc-toolbar button.rbc-active {
+  background-image: none;
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  background-color: var(--primaryColor) !important;
+  border-color: #adadad;
+  color: white !important;
+}
+.rbc-month-header {
+  background: var(--tertiaryColor);
 }
