--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,5 +1,3 @@
-
-
 html,
 body {  
   font-size: 100%;
@@ -448,4 +446,139 @@ table tbody{
   background-position: 75% 0%, 25% 50%;
   background-size: auto, auto;
   background-repeat: no-repeat, no-repeat;
+}
+
+.input-group, .input-group-text{
+  color: var(--primaryColor);
+  background-color: var(--tertiaryColor);
+  background-clip: padding-box;
+  border: none;
+  border-radius: 10px;
+}
+.home-image{
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  height: 300px;
+  width: 100%;
+}
+.input-group-text, .ride-text{   
+  padding: 10px;
+}
+.ride-card{
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0 , 0.2);
+  transition: all 0.2s;
+}
+.ride-card:hover{
+  box-shadow: 6px 6px 15px 0px rgba(0, 0, 0 , 0.2);
+  transform: scale(1.04);
+}
+.line-ride {
+  width: 4px;
+  background: grey;
+  margin-left: 3px;
+  height: calc(65px);
+}
+.circle-ride-from {
+  box-sizing: border-box;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid orange;
+  border-radius: 50%;
+}
+.circle-ride-to {
+  box-sizing: border-box;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid var blue;
+  border-radius: 50%;
+}
+.carousel-control-next-icon:after
+{
+content: '>';
+font-size: 30px;
+color: rgb(7, 1, 1);
+}
+
+.carousel-control-prev-icon:after {
+content: '<';
+font-size: 30px;
+color: rgb(8, 0, 0);
+}
+
+
+
+@media(max-width: 991px){
+  .line-ride{
+      height: calc(65px);
+  }
+
+  .recent{
+      margin-left: 2%;
+      margin-top: 10px;
+      font-size: 20px;
+  }
+  .home-image{
+      height: 150px;
+  }
+}
+
+
+.input-group, .input-group-text{
+  color: var(--primaryColor);
+  background-color: var(--tertiaryColor);
+  background-clip: padding-box;
+  border: none;
+  border-radius: 10px;
+}
+.input-group-text, .ride-text{   
+  padding: 10px;
+}
+.ride-card{
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0 , 0.2);
+  transition: all 0.2s;
+  width: 100%;
+}
+.ride-card:hover{
+  box-shadow: 6px 6px 15px 0px rgba(0, 0, 0 , 0.2);
+  transform: scale(1.04);
+}
+.line-ride-card {
+  width: 4px;
+  background: grey;
+  margin-left: 3px;
+  height: calc(43px);
+}
+.circle-ride-from {
+  box-sizing: border-box;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid var(--orange);
+  border-radius: 50%;
+}
+.circle-ride-to {
+  box-sizing: border-box;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid var(--blue);
+  border-radius: 50%;
+}
+
+@media(max-width: 991px){
+  .line-ride{
+      height: calc(65px);
+  }
+}
+
+@media( max-width: 760px){
+  .line-ride{
+      height: calc(95px);
+  }
+  .how-it-works {
+    background: transparent;
+  }  
 }
