--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -659,3 +659,7 @@ color: rgb(8, 0, 0);
     transform: rotate(360deg);
   }
 }
+.main{
+  background: var(--primaryColor);
+  border-radius: 0 0 0 100px;
+}
