--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -705,3 +705,7 @@ color: rgb(8, 0, 0);
   background: var(--primaryColor);
   border-radius: 0 0 0 100px;
 }
+
+.bg-customColor{
+  background-color: rgba(26, 69, 209, 0.06) !important;
+}
