--- a/frontend/components/home/Home.module.css
+++ b/frontend/components/home/Home.module.css
@@ -10,6 +10,9 @@
 .pySection{
     padding: 80px 0px;
 }
+.w-home{
+    width: 150px !important;
+}
 
 .workNumber{
     background: var(--tertiaryColor);
