changed the logo

--- a/frontend/components/navbar/Navbar.module.css
+++ b/frontend/components/navbar/Navbar.module.css
@@ -11,3 +11,21 @@
 .mlAuto{
     margin-left: auto;
 }
+
+@media(max-width: 536px){
+  .logo{
+    height: 60px;
+  }
+}
+
+@media(max-width: 435px){
+  .logo{
+    height: 40px;
+  }
+}
+
+@media(max-width: 342px){
+  .logo{
+    height: 30px;
+  }
+}
