changed the background image

--- a/frontend/components/home/Home.module.css
+++ b/frontend/components/home/Home.module.css
@@ -1,5 +1,5 @@
 .home{
-    background-image: url('/images/home.svg');
+    background-image: url('/images/home.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
