--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -22,6 +22,31 @@ body {
   text-shadow: #6ba4b4 1px 0 1px;
 }
 
+.testimonial-1{
+  background-image: url('/images/testimonial-1.svg') !important;
+  width: 100%;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.testimonial-2{
+  background-image: url('/images/testimonial-2.svg') !important;
+  width: 100%;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.testimonial-3{
+  background-image: url('/images/testimonial-3.svg') !important;
+  width: 100%;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 
 /* Srollbar */
 ::-webkit-scrollbar {
@@ -147,9 +172,12 @@ body {
 }
 
 /* Utility Classes */
-.card{
+.footer-card{
   border: none !important;
   background: transparent !important;
+}
+.card{
+  border: none !important;
 }
 .form-control {
   display: block;
