--- a/frontend/components/home/Home.module.css
+++ b/frontend/components/home/Home.module.css
@@ -1,9 +1,10 @@
 .home{
-    background-image: url('/images/home.jpg');
+    background-image: url('/images/home.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    color: var(--primaryColor);
     min-height: 85vh;
 }
 
@@ -25,5 +26,18 @@
     }    
     .mobileCenter{
         text-align: center;
+    }
+}
+
+@media( max-width: 516px){
+    .home{
+        background-image: none;
+        background: var(--primaryColor);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        color: white !important;
+        min-height: 85vh;
     }
 }
